--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<table>
+			<tr><td colspan="4"><input type="text"></td></tr>
+			<tr>
+				<td><button type="reset" id="clr">C</button></td>
+				<td><button type="button" id="divide">/</button></td>
+				<td><button type="button" id="multiply">*</button></td>
+				<td><button type="button"><-</button></td>
+			</tr>
+			<tr>
+				<td><button type="button" id="block7">7</button></td>
+				<td><button type="button" id="block8">8</button></td>
+				<td><button type="button" id="block9">9</button></td>
+				<td><button type="button" id="minus">-</button></td>
+			</tr>
+			<tr>
+				<td><button type="button" id="block4">4</button></td>
+				<td><button type="button" id="block5">5</button></td>
+				<td><button type="button" id="block6">6</button></td>
+				<td><button type="button" id="plus">+</button></td>
+			</tr>
+			<tr>
+				<td><button type="button" id="block1">1</button></td>
+				<td><button type="button" id="block2">2</button></td>
+				<td><button type="button" id="block3">3</button></td>
+				<td><button type="button" id="dot">.</button></td>
+			</tr>
+			<tr>
+				<td><button type="button">(</button></td>
+				<td><button type="button" id="block0">0</button></td>
+				<td><button type="button">)</button></td>
+				<td><button type="button" id="ans">=</button></td>
+			</tr>
+		</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
